# s7_test

./: .env.example  .gitignore  README.adoc  README.md  docker-compose.yaml  pyproject.toml  settings.py  start_app.py
application/: api_models.py  application.py  routers.py
logic/: file_processor.py
persistance/: postgres_connection.py  repository.py
scheduler/: job_process_file.py  scheduler.py
src/s7_test/: settings.py  start_app.py
src/s7_test/application/: api_models.py  application.py  routers.py
src/s7_test/logic/: file_processor.py
src/s7_test/persistance/: bd_models.py  postgres_connection.py  repository.py
src/s7_test/scheduler/: job_process_file.py  scheduler.py
tests/: .env-test  conftest.py  fake_settings.py  fixtures.py  settings.py  test_api.py  test_logic.py
tests/test_files/In/: 20221129_1234_DME.csv  empty_20221129_1234_DME.csv
